--- a/.workflows/my_yml.yml
+++ b/.workflows/my_yml.yml
@@ -10,7 +10,7 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-    timiout-minutes: 120
+    timeout-minutes: 120
     steps:
       - uses: actions/checkout@v3
       - uses: iterative/setup-cml@v1
@@ -18,11 +18,11 @@ jobs:
         env:
           REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
-          pip install -r requirememts.txt
+          pip install -r requirements.txt
           python File.py
       - name: Get-CML-Results
         env:
-          REPO_TOKEN: ${{secrets.GTHUB_TOKEN}}
+          REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           echo "#Results">report.md
           cat results.txt>>report.md
