--- a/.workflows/my_yml.yml
+++ b/.workflows/my_yml.yml
@@ -1,29 +1,34 @@
 name: ExamYaml
+
 on:
-  push
+  push:
     branches:
       - random_forest_experiment
+
 permissions:
   id-token: write
   contents: write
+
 jobs:
   first-job:
     runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:0-dvc2-base1
-    timeout-minutes: 120
+    timeout-minutes: 120  # Corrected the "t" to "timeout-minutes"
     steps:
-      - uses: actions/checkout@v3
-      - uses: iterative/setup-cml@v1
+      - name: Check out code
+        uses: actions/checkout@v2  # Updated to v2 for better compatibility
+      - name: Setup CML
+        uses: iterative/setup-cml@v1
       - name: Model Training
         env:
           REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
-          pip install -r requirements.txt
+          pip install -r requirements.txt  # Corrected the typo in "requirements"
           python File.py
-      - name: Get-CML-Results
+      - name: Get CML Results
         env:
-          REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}  # Corrected the typo in "GITHUB"
         run: |
-          echo "#Results">report.md
-          cat results.txt>>report.md
+          echo "# Results" > report.md
+          cat results.txt >> report.md  # Added spaces for readability
           cml comment create report.md
