--- a/.github/workflows/examyaml.yml
+++ b/.github/workflows/examyaml.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: iterative/setup-cml@v2
       - name: FirstStep
         env:
-          REPO_TOKEN: ${{secrets.GUTHUB_TOKEN}}
+          REPO_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           pip install -r requirements.txt
           python File.py
